fix(modal): center fluid action buttons correctly
In case a fluid action button is used within a modal, it was not centered correctly because of the left margin. As fluid buttons occupy the whole width this PR removes the left margin in those cases

--- a/src/definitions/modules/modal.less
+++ b/src/definitions/modules/modal.less
@@ -175,7 +175,7 @@
   border-top: @actionBorder;
   text-align: @actionAlign;
 }
-.ui.modal .actions > .button {
+.ui.modal .actions > .button:not(.fluid) {
   margin-left: @buttonDistance;
 }
 .ui.basic.modal > .actions {
